<resources>
    <string name="app_name">MxwVideo</string>
    <string name="tab_home">首页</string>
    <string name="tab_follow">关注</string>
    <string name="tab_publish">发布</string>
    <string name="tab_discover">发现</string>
    <string name="tab_me">我的</string>
    <string name="card_my_publish">我的发布</string>
    <string name="card_my_ticket">我的订单</string>
    <string name="card_security_setting">安全设置</string>
    <string name="my_info">我的资料</string>
    <string name="save">保存</string>
    <string name="enter_phone_num">请输入您的手机号</string>
    <string name="verification_code">验证码</string>
    <string name="enter_password">请输入你的密码</string>
    <string name="enter_password_again">请再次输入您的密码</string>
    <string name="login">立即登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">注册账号</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="set_password">设置密码</string>
    <string name="change_pwd">修改密码</string>
    <string name="phone_num">手机号</string>
    <string name="unbound">未绑定</string>
    <string name="exit">退出登录</string>
    <string name="follow_top_text">你还没有关注的人，赶紧去关注吧</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="test_name">测试名称</string>
    <string name="test_title">测试副标题</string>
    <string name="test_num">测试数量3000</string>
    <string name="add_follow">+关注</string>
    <string name="title">标题</string>
    <string name="suggest">建议输入8-20个字符</string>
    <string name="publish_im">立即发布</string>
    <string name="description">描述</string>
    <string name="input_phone">请输入正确手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="right_num">请输入正确手机号码</string>
    <string name="sended">发送成功</string>
    <string name="regist_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="net_error">请求错误</string>
    <string name="name_recomend">好的名字可以让你的朋友更容易记住你</string>
    <string name="modify_name">更改名字</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="my_follow">我的关注</string>
</resources>
