<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_head_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/iv_head_icon"
                android:text="@string/test_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_name"
                android:layout_below="@id/tv_name"
                android:text="@string/test_title"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_fans_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_name"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@id/tv_name"
                android:text="@string/test_num"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/tv_btn_follow"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_15"
                android:gravity="center"
                android:background="@drawable/text_view_back"
                android:text="@string/add_follow"
                android:textColor="@color/bottom_bar_un"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
      />
    </LinearLayout>
</android.support.v7.widget.CardView>