<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.me.SecurityActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_change_pwd"
        android:background="@color/card_view_back"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13dp"
            android:text="@string/change_pwd"
            android:textColor=" #333333"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|center_vertical"
            android:background="@mipmap/icon_arrow_right" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_phone_num"
        android:background="@color/card_view_back"
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13dp"
            android:text="@string/phone_num"
            android:textColor=" #333333"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="36dp"
            android:text="@string/unbound"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|center_vertical"
            android:background="@mipmap/icon_arrow_right" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_exit"
        android:background="@color/card_view_back"
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:text="@string/exit"
            android:textColor=" #333333"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>
</LinearLayout>