<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
        <EditText
            android:id="@+id/tv_phone_num"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/icon_user"
            android:hint="@string/enter_phone_num"
            android:drawablePadding="10dp"
            android:layout_marginStart="40dp"
            android:inputType="phone"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="1dp"
            android:background="#C1C1C1"/>
        <EditText
            android:id="@+id/tv_enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:layout_marginStart="40dp"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/icon_code"
            android:drawableEnd="@mipmap/icon_code"
            android:layout_marginEnd="40dp"
            android:inputType="number"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="20dp"
            android:background="#C1C1C1"/>
    <android.support.v7.widget.CardView
        android:id="@+id/tv_next"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        app:cardBackgroundColor="#E93639"
        app:cardCornerRadius="5dp"
        android:layout_height="40dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bottom_bar_un"
            android:textSize="18sp"
            android:text="@string/next"/>
    </android.support.v7.widget.CardView>

</LinearLayout>