<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:background="@mipmap/icon_me_background">

        <ImageView
            android:id="@+id/head_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp"
            android:src="@mipmap/icon_headimg" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/head_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/login"
            android:textColor="@color/bottom_bar_un"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/icon_my_layout"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_follow_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="0"
                android:textSize="16sp"
                android:drawableTop="@mipmap/icon_follow"
                android:textColor="@color/bottom_bar_un" />

            <TextView
                android:id="@+id/tv_fans_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="0"
                android:textSize="16sp"
                android:drawableTop="@mipmap/icon_fans"
                android:textColor="@color/bottom_bar_un" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="297dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/card_publish"
            android:background="@color/card_view_back"
            android:layout_width="match_parent"
            android:layout_height="51dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:src="@mipmap/icon_my_publish"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="54dp"
                android:text="@string/card_my_publish"
                android:textColor=" #333333"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end|center_vertical"
                android:background="@mipmap/icon_arrow_right"/>
        </android.support.v7.widget.CardView>
        <View
            android:background="@color/view_background"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <android.support.v7.widget.CardView
            android:id="@+id/card_ticket"
            android:background="@color/card_view_back"
            android:layout_width="match_parent"
            android:layout_height="51dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:src="@mipmap/icon_my_ticket"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="54dp"
                android:text="@string/card_my_ticket"
                android:textColor=" #333333"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end|center_vertical"
                android:background="@mipmap/icon_arrow_right" />
        </android.support.v7.widget.CardView>
        <View
            android:background="@color/view_background"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <android.support.v7.widget.CardView
            android:id="@+id/card_setting"
            android:background="@color/card_view_back"
            android:layout_width="match_parent"
            android:layout_height="51dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:src="@mipmap/icon_security_setting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="54dp"
                android:text="@string/card_security_setting"
                android:textColor=" #333333"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end|center_vertical"
                android:background="@mipmap/icon_arrow_right"/>
        </android.support.v7.widget.CardView>
        <View
            android:background="@color/view_background"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </LinearLayout>

</FrameLayout>